# tensor

./: CHANGELOG.md  CMakeLists.txt  Makefile
cmake/: vix_ai_tensorConfig.cmake.in
examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/vix/ai/tensor/: Device.hpp  Engine.hpp  Tensor.hpp  Version.hpp
src/: Device.cpp  Engine.cpp  Tensor.cpp  Version.cpp
tests/: CMakeLists.txt  device_tests.cpp  engine_tests.cpp  smoke.cpp  tensor_tests.cpp
